--- a/config/database.yml
+++ b/config/database.yml
@@ -16,10 +16,12 @@ development:
 test:
   <<: *default
   database: e_core_development_test
-  username: 'gustavo'
-  password: 'password123'
-  host: 'localhost'
-  port: 5433
+  username: <%= ENV['POSTGRES_USER'] %>
+  password: <%= ENV['POSTGRES_PASSWORD'] %>
+#  username: 'gustavo'
+#  password: 'password123'
+#  host: 'localhost'
+#  port: 5433
 
 production:
   <<: *default
