--- a/config/database.yml
+++ b/config/database.yml
@@ -18,10 +18,7 @@ test:
   database: e_core_development_test
   username: <%= ENV['POSTGRES_USER'] %>
   password: <%= ENV['POSTGRES_PASSWORD'] %>
-#  username: 'gustavo'
-#  password: 'password123'
-#  host: 'localhost'
-#  port: 5433
+  host: <%= ENV['POSTGRES_DB_TEST_HOST'] %>
 
 production:
   <<: *default
